Actual Alignment Fix

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,9 @@ h1 {
 }
 
 #images {
+	margin:auto;
+	text-align:center;
+
 }
 
 footer {
